--- a/content/post/2023-11-06-ml4jets.md
+++ b/content/post/2023-11-06-ml4jets.md
@@ -1,6 +1,7 @@
 ---
 title: Machine learning for jets at DESY
 date: 2023-11-06
+type: "post"
 ---
 
 It's good to be at the ML4Jets workshop at DESY, with awesome talks & organization!
