--- a/content/post/2024-01-22-taus.md
+++ b/content/post/2024-01-22-taus.md
@@ -1,6 +1,7 @@
 ---
 title: Paper on identifying tau leptons with transformers
 date: 2024-03-24
+type: "post"
 ---
 
 🎉 New [paper](https://doi.org/10.1016/j.cpc.2024.109095) out in Computer Physics Communications! 🎉
