--- a/content/post/2024-03-24-acat.md
+++ b/content/post/2024-03-24-acat.md
@@ -1,6 +1,7 @@
 ---
 title: Advanced Computing and Analysis Tools 2024, New York
 date: 2024-03-24
+type: "post"
 ---
 
 I gave a plenary [talk](https://indico.cern.ch/event/1330797/contributions/5776140/) on new ML-based reconstruction workflows for colliders at the [Advanced Computing and Analysis Tools (ACAT) 2024](https://indico.cern.ch/event/1330797/) workshop at [Stony Brook University](https://www.stonybrook.edu/), coorganized by [Brookhaven National Laboratory](https://www.bnl.gov/world/).
