--- a/content/post/2024-04-10-nature.md
+++ b/content/post/2024-04-10-nature.md
@@ -1,6 +1,7 @@
 ---
 title: Paper on improved particle flow reconstruction with ML 
 date: 2024-04-10
+type: "post"
 ---
 
 Our paper on machine-learned particle flow reconstruction is now out in [Nature Communications Physics](https://www.nature.com/commsphys/), with open access support by the [CERN Library](https://catalogue.library.cern/).
