--- a/content/post/2024-06-06-viimsi.md
+++ b/content/post/2024-06-06-viimsi.md
@@ -1,6 +1,7 @@
 ---
-title: Chat with students at Viimsi High School
+title: Outreach event at Viimsi High School
 date: 2024-06-06
+type: "post"
 ---
 
 I was invited to speak to students at [Viimsi High School](https://vgm.edu.ee/) about CERN, particle physics and AI!
