--- a/content/post/2018-04-08-tth.md
+++ b/content/post/2018-04-08-tth.md
@@ -1,6 +1,7 @@
 ---
 title: Observation of ttH
 date: 2018-04-08
+type: "post"
 ---
 
 I took part in the analysis that led to the observation of ttH by the CMS Collaboration: https://cms.cern/news/tth-announcement.
