--- a/content/updates/2023-09-25-imperial.md
+++ b/content/updates/2023-09-25-imperial.md
@@ -4,5 +4,6 @@ date: 2023-09-25
 type: "post"
 ---
 
-I participated in the Fast Machine Learning For Science workshop at Imperial College London: https://indico.cern.ch/event/1283970/
+I participated in the Fast Machine Learning For Science workshop at Imperial College London: https://indico.cern.ch/event/1283970/.
+
 The talk on machine learning for particle flow reconstruction was given by Farouk Mokhtar: https://indico.cern.ch/event/1283970/contributions/5554336/
