update openlab event

--- a/content/updates/2025-03-04-openlab.md
+++ b/content/updates/2025-03-04-openlab.md
@@ -7,3 +7,9 @@ type: "post"
 I gave a presentation at the CERN OpenLab workshop on machine-learned particle flow.
 
 https://indico.cern.ch/event/1440389/#6-machine-learned-particle-flo
+
+This presentation discusses using advanced machine learning (ML) techniques to better understand the complex data produced by particle detectors, like those at CERN. Currently, identifying particles and reconstructing collision events relies on hand-coded rules which are difficult to update or adapt. The proposed ML approach, using methods like neural networks, learns directly from detector data to figure out what happened during particle collisions.  
+
+This ML method offers significant advantages: it reconstructs particle events more accurately and much faster than traditional techniques, processing data in milliseconds instead of seconds. Furthermore, these ML models are flexible, capable of running on various computing systems, and can be quickly adapted for new detector designs with less data. While already showing state-of-the-art performance on simulations, the next steps involve testing on real data and integrating more parts of the analysis process into the ML models. Ultimately, this approach promises to improve physics results, speed up research, and make the analysis process more efficient and adaptable.
+
+The recording is available here: https://cds.cern.ch/record/2925956
